Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24445

Using innodb_undo_tablespaces corrupts system tablespace

    XMLWordPrintable

Details

    Description

      In the rewrite of MDEV-8139 (based on changes that were made in MDEV-15528), we introduced a wrong assumption that any persistent tablespace that is not an .ibd file is the system tablespace. This assumption is broken when innodb_undo_tablespaces (undo001… files) are being used. By default, we have innodb_undo_tablespaces=0 (the persistent undo log is being stored in the system tablespace).

      A simple test with innodb_file_per_table=0 and innodb_undo_tablespaces=3 reproduced corruption where a page in the system tablespace had been filled with zeroes (except for FIL_NULL stored in FIL_PAGE_PREV and FIL_PAGE_NEXT).

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d
                  1d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.